# IVSSF-RL

./: README.md  rule_base.txt  rulebook.json
IVSSF_RL/: __init__.py  main_social_teacher_pretrain.py  social_fuzzy_teacher.py  social_rulebook.py  social_state.py  social_teacher_agent.py  social_teacher_env.py  social_teacher_trainer.py
turtlebot3_dynamic_pedestrians/: CMakeLists.txt  package.xml
turtlebot3_dynamic_pedestrians/launch/: social_teacher_cross.launch  social_teacher_cross_dual_lane.launch  social_teacher_wall_8ped_opposite.launch  social_train_hybrid_8ped.launch  social_train_hybrid_beifen.launch
turtlebot3_dynamic_pedestrians/models/edge_goal_marker/: model.config  model.sdf
turtlebot3_dynamic_pedestrians/models/pedestrian_actor_assets/: model.config  model.sdf
turtlebot3_dynamic_pedestrians/models/pedestrian_lidar_proxy/: model.config  model.sdf
turtlebot3_dynamic_pedestrians/models/pedestrian_scan_box/: model.config  model.sdf
turtlebot3_dynamic_pedestrians/scripts/: scan_visible_pedestrians.py  scan_visible_pedestrians（复件）.py
turtlebot3_dynamic_pedestrians/worlds/: social_teacher_cross.world  social_teacher_cross_dual_lane.world  social_train_hybrid.world  social_train_hybrid_8ped.world  social_wall_8ped_opposite.world
